update html styles

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
     body {
         line-height: 1;
     }
-    
+
     ol,
     ul {
         list-style: none;
@@ -131,7 +131,7 @@
         content: '';
         content: none;
     }
-    
+
     table {
         border-collapse: collapse;
         border-spacing: 0;
@@ -149,10 +149,10 @@
 <body>
     <style style="font-size: small; padding: 2px;" contenteditable="true">
         style {
-            background-color: lightblue;
-            color: black;
+            background-color: darkblue;
+            color: white;
         }
-        </style>
+    </style>
     <style style='display: block;' contenteditable="true">
         html {
             background-color: blue;
@@ -167,7 +167,7 @@
     </style>
     <style style='display: block;' contenteditable="true">
         h1 {
-            background-color: snow;
+            background-color: lightyellow;
             font-family: 'Lucida Sans', sans-serif;
             font-size: xxx-large;
             text-align: center;
@@ -185,7 +185,7 @@
     <style style='display: block;' contenteditable="true">
         p {
             background-color: black;
-            color: white;
+            color: magenta;
             font-size: larger;
             padding: 18px;
             user-select: none;
@@ -193,7 +193,7 @@
     </style>
     <style style='display: block;' contenteditable="true">
         header {
-            background-color: red;
+            background-color: gold;
             padding: 9px 0;
         }
     </style>
@@ -205,19 +205,20 @@
     </style>
     <style style='display: block;' contenteditable="true">
         footer {
-            background-color: brown;
+            background-color: darkslategray;
             padding: 18px;
             user-select: none;
         }
-        </style>
+    </style>
     <style style='display: block;' contenteditable="true">
         footer p::after {
-            color: gold;
+            color: yellow;
             content: 'footer p::after - Rami 2023';
         }
     </style>
     <header>
-    <h1>Live editable styles</h1></header>
+        <h1>Live editable styles</h1>
+    </header>
     <main></main>
     <p>Change the styles in the style tags above and see the changes unfold here live.</p>
     <footer>
